# painted

./: Cargo.toml  README.md
examples/: control.rs  custom_colors.rs  dynamic_colors.rs  most_simple.rs  nested_colors.rs
src/: control.rs  lib.rs  style.rs
tests/: ansi_term_compat.rs
