[package]
name = "painted"
description = "Colored reborn (altough I won't maintain it much as I only need to publish a new version of colored)"
version = "1.0.0"
edition = "2021"
authors = ["Demir Yerli <mrquantumoff@protonmail.com>","Thomas Wickham <mackwic@gmail.com>"]
license = "MPL-2.0"
homepage = "https://github.com/mrquantumoff/painted"
repository = "https://github.com/mrquantumoff/painted"
readme = "README.md"
keywords = ["color", "string", "term", "ansi_term", "term-painter"]

[features]
# with this feature, no color will ever be written
no-color = []

[dependencies]
atty = "0.2"
lazy_static = "1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
default-features = false
features = [
    "consoleapi",
    "processenv",
    "winbase"
]

[dev_dependencies]
ansi_term = "0.12"
rspec = "=1.0.0-beta.3"
